--- a/project/src/main/java/gui/UI.fxml
+++ b/project/src/main/java/gui/UI.fxml
@@ -8,7 +8,10 @@
 <AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AppController">
    <children>
       <Canvas fx:id="canvas" height="500.0" layoutX="151.0" layoutY="150.0" width="500.0" />
-      <Button layoutX="381.0" layoutY="672.0" mnemonicParsing="false" onAction="#startSimulation" text="Start" />
+      <Button fx:id="playButton" layoutX="381.0" layoutY="672.0" mnemonicParsing="false" onAction="#startSimulation" text="Start" />
       <ChoiceBox layoutX="327.0" layoutY="712.0" prefWidth="150.0" />
+      <Button fx:id="fastButton" layoutX="440.0" layoutY="34.0" mnemonicParsing="false" onAction="#changeSpeed" prefWidth="75.0" text="Fast" />
+      <Button fx:id="slowButton" alignment="CENTER" layoutX="290.0" layoutY="34.0" mnemonicParsing="false" onAction="#changeSpeed" prefWidth="75.0" text="Slow" />
+      <Button fx:id="normalButton" layoutX="365.0" layoutY="34.0" mnemonicParsing="false" onAction="#changeSpeed" prefWidth="75.0" text="Normal" />
    </children>
 </AnchorPane>
