--- a/project/src/main/java/gui/UI.fxml
+++ b/project/src/main/java/gui/UI.fxml
@@ -9,7 +9,7 @@
 <AnchorPane prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AppController">
 	<children>
 		<Canvas fx:id="canvas" height="500.0" layoutX="50.0" layoutY="150.0" width="500.0" />
-		<Button fx:id="playButton" layoutX="270.0" layoutY="691.0" mnemonicParsing="false" onAction="#startSimulation" text="Start">
+		<Button fx:id="playButton" layoutX="270.0" layoutY="691.0" mnemonicParsing="false" onAction="#changeSimulationState" text="Start">
          <font>
             <Font size="18.0" />
          </font></Button>
